<resources>
    <string name="usercenter_store">购卡充值</string>
    <string name="usercenter_userinfo">个人信息</string>
    <string name="usercenter_login">登&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;录</string>
    <string name="usercenter_login_register">登&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;录
    </string>
    <string name="usercenter_purchase_history">购买记录</string>
    <string name="usercenter_help">客服中心</string>
    <string name="usercenter_location">定&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;位</string>

    <string name="usercenter_help_introduction">2011年3月17日，上海广播电视台，上海东方传媒集团有限公司（SMG，原上海文广新闻传媒集团）
        与联想集团在上海签署协议，共同宣布在移动互联视频服务领域达成战略合作。双方将通过发挥各自在终端产品，云计算，内容资源，市场运营等
        方面的优势，联手开拓中国移动互联与数字家庭市场。
    </string>
    <string name="help_center">客服中心</string>
    <string name="help_tel">客服热线：400-651-5050</string>
    <string name="help_mail">客服邮箱：kf@ismartv.cn</string>
    <string name="help_qq">客服QQ：2740077957</string>
    <string name="help_wx">客服微信：视云影院服务号</string>
    <string name="shipinkefu">请点击进入视频客服</string>

    <string name="exit_account">退出登录</string>
    <string name="confirm_exit_account_text">您是否退出登录?</string>
    <string name="exit_account_message_text">您已退出登录!</string>
    <string name="association">关联</string>
    <string name="association_phone">关联手机</string>
    <string name="association_phone_number">手机号码</string>
    <string name="association_verification_code">验证码</string>
    <string name="association_submit">提交</string>
    <string name="association_fetch_verification">获取验证码</string>
    <string name="association_prompt">(
        <font color='red'>您的设备未关联手机号，设备损坏或更换是账户和余额特权将清零</font>
        )
    </string>
    <string name="change_account">切换</string>


    <string name="personcenter_orderlist_item_orderday">购买时间 : %1$s</string>
    <string name="personcenter_orderlist_item_remainday">剩余 %1$d天</string>
    <string name="personcenter_orderlist_item_cost">消费 : %1$s元</string>
    <string name="personcenter_orderlist_item_paysource">支付渠道 : %1$s</string>

    <string name="location_currentPosition_title">当前位置&#160;:&#160;</string>
    <string name="tomorrow_text">明天</string>
    <string name="location_selectedPosition_title">选中位置&#160;:&#160;</string>
    <string name="today_text">今天</string>
    <string name="usercenter_charge">充值</string>
    <string name="ismartv_copyright">上海视云版权所有</string>
    <string name="ismartv_copyright_english">Copyright © 2011–2031 All right reserved</string>
    <string name="confirm_selected_position_prompt">您是否确定要将当前位置更换为选中位置?</string>

    <string name="location_confirm">确&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;定</string>
    <string name="location_cancel">取&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;消</string>
</resources>
