<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View"/>

        <variable
            name="tasks"
            type="tv.ismar.usercenter.viewmodel.HelpViewModel"/>

        <variable
            name="actionHandler"
            type="tv.ismar.usercenter.HelpContract.Presenter"/>
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/help_title_icon_w"
                android:layout_height="@dimen/help_title_icon_h"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/usercenter_fragment_help_ismartv_icon_margin_top"
                android:src="@drawable/usercenter_help_ismartv_icon"/>

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/usercenter_fragment_help_ismartv_introduction_margin_left"
                android:layout_marginRight="@dimen/usercenter_fragment_help_ismartv_introduction_margin_right"
                android:layout_marginTop="@dimen/usercenter_fragment_help_ismartv_introduction_margin_top"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/usercenter_help_introduction"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/usercenter_fragment_help_ismartv_introduction_text_size"/>

        </LinearLayout>

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:src="@drawable/vertical_divider_line"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/usercenter_help_helpcenter_text_margin_top"
                android:text="@string/help_center"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/usercenter_fragment_help_ismartv_introduction_text_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/usercenter_help_contact_margin_left"
                android:layout_marginTop="@dimen/usercenter_fragment_help_ismartv_introduction_margin_top"
                android:text="@string/help_tel"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/usercenter_fragment_help_ismartv_introduction_text_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/usercenter_help_contact_margin_left"
                android:layout_marginTop="@dimen/usercenter_fragment_help_ismartv_introduction_lineSpacingExtra"
                android:text="@string/help_mail"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/usercenter_fragment_help_ismartv_introduction_text_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/usercenter_help_contact_margin_left"
                android:layout_marginTop="@dimen/usercenter_fragment_help_ismartv_introduction_lineSpacingExtra"
                android:text="@string/help_qq"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/usercenter_fragment_help_ismartv_introduction_text_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/usercenter_help_contact_margin_left"
                android:layout_marginTop="@dimen/usercenter_fragment_help_ismartv_introduction_lineSpacingExtra"
                android:text="@string/help_wx"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/usercenter_fragment_help_ismartv_introduction_text_size"/>
            <TextView
                android:id="@+id/apk_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/usercenter_help_contact_margin_left"
                android:layout_marginTop="@dimen/usercenter_fragment_help_ismartv_introduction_lineSpacingExtra"
                android:text="@string/help_wx"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/usercenter_fragment_help_ismartv_introduction_text_size"/>

            <ImageButton
                android:scaleType="fitXY"
                android:id="@+id/ismartv_icon"
                android:layout_width="@dimen/ismartv_icon_w"
                android:layout_height="@dimen/ismartv_icon_w"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/usercenter_help_icon_margin_top"
                android:background="@drawable/launcher_selector"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:src="@drawable/ismartv_icon"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/usercenter_help_shipinkefu_margin_top"
                android:text="@string/shipinkefu"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/usercenter_fragment_help_ismartv_introduction_text_size"/>

        </LinearLayout>
    </LinearLayout>
</layout>

